components/observability/scrutiny-app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scrutiny
  labels:
    app.kubernetes.io/instance: scrutiny
    app.kubernetes.io/name: scrutiny
  annotations:
    gethomepage.dev/href: "https://scrutiny.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/scrutiny.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["scrutiny.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: scrutiny
          port: 8080
